version/0.22/_sources/api/solver/_autosummary/settings/node_based_averaging.rst.txt
:orphan:

.. _node_based_averaging:

node_based_averaging
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.node_based_averaging.node_based_averaging
    :show-inheritance:

.. rubric:: Attributes

==============================================   ======================================================================================

Attribute                                                                                                                       Summary

==============================================   ======================================================================================
:ref:`enabled <enabled_10>`                                                       Enable/disable node-based averaging of DPM variables.

:ref:`source_avg_enabled <source_avg_enabled>`                                   Enable/disable averaging of DPM source terms to nodes.

:ref:`average_every_step <average_every_step>`       Do the averaging after each integration step for higher accuracy at a higher cost.

:ref:`kernel <kernel>`                                                          Group containing node based averaging related settings.

==============================================   ======================================================================================

.. rubric:: Included in:

==========================   ===================================================================================================================

Parent                                                                                                                                   Summary

==========================   ===================================================================================================================
:ref:`numerics <numerics>`       Main menu to allow users to set options controlling the solution of ordinary differential equations describing 

==========================   ===================================================================================================================

